fix: adjust z-index for vote item header in star vote panel

--- a/src/app/private/star-vote-panel/star-vote-panel.component.scss
+++ b/src/app/private/star-vote-panel/star-vote-panel.component.scss
@@ -23,6 +23,7 @@
   position: relative;
 
   .vote-item-header {
+    z-index: 1;
     padding: 16px 8px;
     text-align: center;
     font-size: 20px;
